headphones.css
* {
    margin: 0;
    padding: 0;
}

body {
    font-family: Arial, Helvetica, sans-serif;
}

ul {
    list-style-type: none;
}

a {
    text-decoration: none;
}

.width {
    max-width: 1280px;
    margin: 0 auto;
}

/* navigation */

header {
    background-color: black;
    color: white;
}

nav {
    display: flex;
    justify-content: space-between;
    align-items: center;
    padding: 1em;
    position: relative;
}

nav .left {
    display: flex;
}

#logo {
    color: white;
    font-size: 24px;
    font-weight: bold;
    margin-right: 2em;
}

.nav-links {
    display: flex;
    justify-content: space-between;
    align-items: center;
    gap: 2em;
}

.nav-links a {
    color: white;
}

.nav-links a:hover {
    color: orange;
}

#signup {
    background-color: transparent;
    color: white;
    font-weight: bold;
    border: 2px solid orange;
    padding: 1em;
}

#signup:hover {
    background-color: orange;
    color: white;
    cursor: pointer;
}

#user button {
    background-color: transparent;
    color: white;
    display: flex;
    justify-content: space-between;
    align-items: center;
    gap: 1em;
    border: 0;
    cursor: pointer;
    padding: 1em;
}

#sub-menu {
    background-color: white;
    color: black;
    position: absolute;
    top: 100%;
    right: 0;
    margin-right: 1.5em;
    padding: 1em 1em 1.5em 1em;
    transition: height 0.2s linear;
}

#sub-menu button {
    background-color: orange;
    color: white;
    border: 0;
    padding: 1em 2em;
    cursor: pointer;
}

#sub-menu p {
    display: flex;
    justify-content: center;
    align-items: center;
    gap: 5px;
    font-size: 14px;
    margin-top: 2em;
    text-align: center;
    cursor: pointer;
}

/* account modal */
.modal {
    background-color: white;
    color: black;
    display: flex;
    flex-direction: column;
    padding: 0 2em 4em 2em;
    position: fixed;
    top: 10%;
    left: 50%;
    transform: translateX(-50%);
    z-index: 2;
}

.modal .close {
    display: flex;
    justify-content: flex-end;
}

.close button {
    background-color: transparent;
    font-size: 24px;
    padding: 1em 0;
    border: 0;
}

.modal .login-container {
    display: flex;
    margin: 4em 0;
}

.modal button {
    cursor: pointer;
}

.create-user {
    margin-top: 1em;
    height: 100%;
    transition: height 0.2s linear;
}

.login-container .left, .login-container .right {
    display: flex;
    flex-direction: column;
    max-width: 300px;
    padding: 2em 2em;
}

.login-container .left {
    border-right: 2px solid #eeeeee;
    min-width: 200px;
}

.login-container input {
    padding: 0.5em 1em;
    width: 250px;
}

.login-container label {
    margin-bottom: 0.5em;
}

.login-container h2 {
    margin-bottom: 1em;
}

.login-container p {
    margin-bottom: 1em;
    line-height: 20px;
}

.login-container button {
    color: white;
    margin-top: 2em;
    max-width: 150px;
    padding: 1em 0.5em;
    font-weight: bold;
    border: 0;
}

.login-container .left button {
    background-color: orange;
}

.login-container .right button {
    color: black;
    background-color: transparent;
    border: 1px solid #acacac;
}

.overlay {
    position: fixed;
    top: 0;
    bottom: 0;
    left: 0;
    right: 0;
    width: 100%;
    height: 100%;
    background: rgba(0, 0, 0, 0.5);
    backdrop-filter: blur(3px);
    z-index: 1
}

.hidden {
    visibility: hidden;
    height: 0px;
}

.full-hidden {
    display: none !important;
}


/* landing page content */
main {
    background-color: black;
    color: white;
}

.hero-container {
    padding: 12em 5em 12em 5em;
}

.hero-text {
    display: flex;
    flex-direction: column;
    max-width: 500px;
    margin-left: 5em;
}

.hero-text h1 {
    margin-bottom: 1em;
}

.hero-text p {
    margin-bottom: 1em;
}

#hero-signup{
    background-color: orange;
    color: white;
    max-width: 150px;
    border: 0;
    padding: 1em;
    cursor: pointer;
}

.info-container {
    background-color: white;
}

.info {
    display: flex;
    flex-direction: column;
    align-items: center;
    padding: 5em;
}

.info li {
    color: black;
    display: flex;
    gap: 2em;
    align-items: center;

    margin-bottom: 2em;
}

/* database content */
#database {
    font-size: 48px;
    text-align: center;
    padding: 3em 1em;
}

#filter-options {
    background-color: white;
}

#filter-options ul {
    color: black;
    display: flex;
    justify-content: space-between;
    padding: 1em 2em;
    border-bottom: 2px solid #eeeeee;
}

#filter-options .left {
    display: flex;
}

#filter-options .left {
    justify-content: flex-start;
}

#filter-options .left li {
    padding: 1em 2em;
}

#filter-options .left select:required:invalid {
    color: #444444;
}

#filter-options .left option[value=""][disabled] {
    display: none;
}

#filter-options .left select {
    border: 0;
}

#all-option {
    cursor: pointer;
}

#sort {
    padding: 0 2em 0 0.5em;
}

#headphones-list {
    background-color: white;
}

#headphones-list ul {
    color: black;
    display: grid;
    grid-gap: 5em;
    grid-template-columns: repeat(auto-fill, 150px);
    justify-content: space-between;
    text-align: center;
    padding: 5em;
}

#headphones-list ul a {
    flex: 1;
}

#headphones-list img {
    margin-bottom: 1.5em;
}

#hp-no-exist {
    color: black;
    font-size: 24px;
    text-align: center;
    padding: 5em;
}

/* headphone page */
.hp-heading {
    text-align: center;
    padding: 4em 1em 5em 1em;
}

.hp-main {
    margin-bottom: 3em;
}

.hp-heading h1 {
    font-size: 36px;
}

.tab-options {
    color: black;
    display: flex;
    justify-content: flex-start;
    padding: 1em 2em;
    border-bottom: 2px solid #eeeeee;
}

.tab-options li {
    padding: 1em 2em;
}

.tab-options li:hover {
    color: orange;
    cursor: pointer;
}

.tab-container {
    background-color: white;
}

.tab-selected {
    color: orange;
}

#specs-container {
    background-color: white;
}

#specs-container ul {
    color: black;
    margin: 0 auto;
    padding: 2em 0 2em 4em;
}

#specs-container ul li {
    font-size: 18px;
    margin-bottom: 2em;
}

#specs-container ul label {
    font-weight: bold;
}

#specs-container ul p {
    margin-top: 0.5em;
}

#reviews-container {
    background-color: white;
}

#reviews-container ul {
    display: flex;
    flex-direction: column;
    color: black;
    padding: 2em 0 4em 4em;
}

#reviews-container li {
    width: 80%;
    padding: 1em 2em 2em 2em;
}

.review-info {
    font-style: italic;
    display: flex;
    justify-content: space-between;
    align-items: center;
}

#reviews-container ul div {
    margin-top: 0.5em;
    color: orange;
}

.review-content {
    margin-top: 1.5em;
}

.star-point {
    color: orange;
}

#hp-error {
    padding: 18em 5em;
}

#hp-error a {
    color: white;
    display: inline-block;
    margin-top: 1em;
    border-bottom: 1px solid orange;
}

/* profile */
#profile-no-hp {
    color: black;
    text-align: center;
    padding: 3em;
}

#profile-list div {
    position: relative;
    flex-grow: 1;
    flex-basis: 200px;
}

#profile-list i {
    color: orange;
    position: absolute;
    top: 0;
    right: -20%;
    cursor: pointer;
}

#add-hp-modal {
    height: 80vh;
    border: 1px solid black;
    overflow-y: scroll;
    padding: 0 1em 0 2em;
    width: 70vw;
}

#add-hp-modal .close {
    border-bottom: 1px solid grey;
    margin-bottom: 1em;
}

#add-hp-container {
    display: flex;
    justify-content: space-between;
}

#add-hp-container ul {
    display: flex;
    flex-direction: column;
    justify-content: flex-start;
    gap: 0;
    align-items: flex-start;
    padding: 0 2em;
}

#add-hp-container li {
    padding: 1em 0 0.5em 0;
    cursor: pointer;
    width: 100%;
    text-align: left;
}

#add-hp-container h2 {
    font-size: 21px;
    margin-bottom: 1em;
}

#modal-brand-section {
    flex-grow: 1;
}

#modal-modelname-section {
    flex-grow: 2;
    border-left: 1px solid grey;
}

#modal-modelname-section li {
    width: 90%;
    display: flex;
    justify-content: space-between;
}

#modal-brand-section .selected {
    border-bottom: 1px solid black;
}

.hp-btn-container {
    text-align: right;
    padding: 1em 2em 0 0;
}

.hp-btn-container button {
    background-color: orange;
    color: white;
    padding: 0.5em 1em 0.5em 1em;
    border: 0;
}

#add-review-modal {
    height: 80vh;
    border: 1px solid black;
    padding: 0 2em 2em 2em;
    width: 50vw;
}

#add-review-container {
    display: flex;
    flex-direction: column;
}

#add-review-container label {
    font-size: 16px;
    font-weight: bold;
    margin-bottom: 0.5em;
}

#add-review-container select {
    padding: 0.5em;
    margin-bottom: 3em;
}

#add-review-container input {
    padding: 0.5em;
    margin-bottom: 1.5em;
}

#add-review-container textarea {
    padding: 1em;
}

#five-stars {
    display: flex;
    flex-direction: row-reverse;
    justify-content: flex-end;
    gap: 0.5em;
    margin-bottom: 2em;
    padding: 0.5em;
    cursor: pointer;
}

.star {
    color: grey;
    cursor: pointer;
}

.star-rating:checked ~ .star {
    color: orange;
}

#add-review-container input[name="star"] {
    display: none;
}

#save-review {
    width: 100px;
    padding: 0.5em 2em;
    border: 0;
    background-color: orange;
    color: white;
    margin: 2em auto 0 auto;
}

/* footer */
footer {
    background-color: orange;
    color: white;
    text-align: center;
    padding: 2em;
}

